# ChessLite

./: .gitignore  README.md  pyproject.toml
ChessLite/: README.md  pyproject.toml
ChessLite/class-diagrams/: chess_uml_diagram.txt
ChessLite/class_diagrams/: chess_uml_diagram.txt  entrypoint.sh
ChessLite/client/chesslite/: package-lock.json  package.json  tsconfig.utils.json
ChessLite/server/: Makefile  README.md  pyproject.toml
ChessLite/server/class_diagrams/: Dockerfile  chess_uml_diagram.txt  uml_diagram_gen.sh
ChessLite/server/src/: main.py
ChessLite/server/src/api/: main.py
ChessLite/server/src/game_board/: game_board.py
ChessLite/server/src/game_controller/: game_controller.py
ChessLite/server/src/piece_manager/: __init__.py  piece_manager.py
ChessLite/src/: main.py
ChessLite/src/api/: main.py
ChessLite/src/game_board/: __init__.py  game_board.py
ChessLite/src/game_controller/: game_controller.py
ChessLite/src/piece_manager/: piece_manager.py
ChessLite/src/pieces/: bishop.py  chesspiece.py  king.py  knight.py  moved_piece_mixin.py  pawn.py  piece_factory.py  queen.py  rook.py
ChessLite/src/players/: __init__.py  ai_player.py  human_player.py  player.py
ChessLite/src/rules/: __init__.py  helper_rules.py  rule.py  rule_handler.py  valid_move_rules.py
ChessLite/src/utils/: piece_type.py
ChessLite/tests/: test_king_piece.py
ChessLite/tests/test_pieces/: test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
ChessLite/tests/test_players/: test_ai_player.py  test_human_player.py
src/: main.py
(+35 files in other folders)
