[tool.poetry]
name = "chesslite"
version = "0.1.0"
description = ""
authors = ["Bharath Padmaraju <bharath.k.padmaraju@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
